kubernetes/apps/prod/nas/garage-ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage-ui
  namespace: nas
spec:
  type: ExternalName
  ports:
    - name: http
      port: 3909
  externalName: ${GARAGE_UI_IP}
